go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - image: dave965/client-grpc3
        name: api-grpc
        imagePullPolicy: "Always"
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: project
spec:
  ports:
  - port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    app: api
  type: ClusterIP
status:
  loadBalancer: {}
