mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:4.4
        name: mongo
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: "0.5"
            memory: "200Mi"
        volumeMounts:
        - mountPath: /mongoconf
          name: config
      volumes:
        - name: config
          configMap:
            name: mongo-configmap
            items:
            - key: mongod-conf
              path: mongod.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: project
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: LoadBalancer
