ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
    - host: 35.222.62.121.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3005
            path: /
